--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,9 @@ jobs:
 #           echo Add other actions to build,
 #           echo test, and deploy your project.
   unit-tests:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     needs: build
     steps:
@@ -49,6 +52,9 @@ jobs:
         run: pushd xtext && ./gradlew test && popd;
 
   c-tests:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     needs: build
     steps:
@@ -57,6 +63,9 @@ jobs:
         run: 	bin/run-lf-tests C;
   
   cpp-tests:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     needs: build
     steps:
@@ -64,6 +73,9 @@ jobs:
         run: 	bin/run-lf-tests Cpp;
         
   ts-tests:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     needs: build
     steps:
@@ -71,6 +83,9 @@ jobs:
         run: 	bin/run-lf-tests TS;
         
   python-tests:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     needs: build
     steps:
