--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/build-setup@v1     
+      - uses: ./github/actions/build-setup    
       - name: Run C tests;
         run: |
           bin/build-lfc;  
