Installing protobuf packages on Ubuntu. Will not work for Mac.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,28 +43,30 @@ jobs:
           # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
           java-version: 14
       - uses: actions/checkout@v2
-      - name: Cache protobuf library # Thanks to https://lukasjoswiak.com/github-actions-protobuf/
-        id: cache-protobuf
-        uses: actions/cache@v1
-        with:
-          path: protobuf
-          key: ${{ runner.os }}-protobuf
-      - name: Build protobuf library
-        if: steps.cache-protobuf.outputs.cache-hit != 'true'
-        run: |
-          git clone https://github.com/protocolbuffers/protobuf.git
-          cd protobuf
-          git submodule update --init --recursive
-          ./autogen.sh
-          ./autogen.sh
-          ./configure
-          make
-          make check
-      - name: Install protobuf library
-        run: |
-          cd protobuf
-          sudo make install
-          sudo ldconfig
+      # - name: Cache protobuf library # Thanks to https://lukasjoswiak.com/github-actions-protobuf/
+      #   id: cache-protobuf
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: protobuf
+      #     key: ${{ runner.os }}-protobuf
+      # - name: Build protobuf library
+      #   if: steps.cache-protobuf.outputs.cache-hit != 'true'
+      #   run: |
+      #     git clone https://github.com/protocolbuffers/protobuf.git
+      #     cd protobuf
+      #     git submodule update --init --recursive
+      #     ./autogen.sh
+      #     ./autogen.sh
+      #     ./configure
+      #     make
+      #     make check
+      # - name: Install protobuf library
+      #   run: |
+      #     cd protobuf
+      #     sudo make install
+      #     sudo ldconfig
+      - name: Install Protobufs
+        run: sudo apt-get install libprotobuf-c-dev protobuf-c-compiler
       - name: Run C tests;
         run: |
           bin/build-lfc;
