--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,18 +4,18 @@ name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
+  # push:
+  #   branches: [ master ]
+  # pull_request:
+  #   branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   unit-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest] # , windows-latest
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       # Setup Build dependencies
@@ -72,6 +72,12 @@ jobs:
         run: |
           brew install protobuf-c;
         if: runner.os == 'macOS'
+      - name: Install Protobufs Windows
+        uses: lukka/run-vcpkg@v4
+        with:
+          vcpkgArguments: 'protobuf'
+          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+        if: runner.os == 'Windows'
       - name: Run C tests;
         run: |
           bin/build-lfc;
@@ -98,7 +104,7 @@ jobs:
   ts-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest]
+        platform: [ubuntu-latest] # , macos-latest 
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
