--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,10 @@ jobs:
           # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
           java-version: 14
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.2 
+        uses: actions/setup-node@v2.1.2
+      - name: Install Protobufs Ubuntu
+        run: sudo apt-get install libprotobuf-dev protobuf-compiler
+        if: runner.os == 'Linux'
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       # - name: Checkout submodules
