--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
   ts-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest] # , macos-latest 
+        platform: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
@@ -116,12 +116,14 @@ jobs:
         uses: actions/setup-node@v2.1.2 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+            submodules: true
       # - name: Checkout submodules
       #   uses: textbook/git-checkout-submodule-action@master # FIXME: will likely not work on windows. Workaround: https://github.com/textbook/git-checkout-submodule-action/issues/7
-      - name: Checkout submodules
-        uses: srt32/git-actions@v0.0.3
-        with:
-          args: git submodule update --init --recursive
+      #- name: Checkout submodules
+      #  uses: srt32/git-actions@v0.0.3
+      #  with:
+      #    args: git submodule update --init --recursive
       - name: Run TS tests;
         run: |
           bin/build-lfc;
