--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -140,8 +140,10 @@ jobs:
         with:
           # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x). Early access versions can be specified in the form of e.g. 14-ea, 14.0.0-ea, or 14.0.0-ea.28
           java-version: 14
+      - name: Setup Python
+        uses: actions/setup-python@v2.1.4
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2      
       - name: Run Python tests;
         run: |
           bin/build-lfc;
