--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,6 +142,21 @@ jobs:
           java-version: 14
       - name: Setup Python
         uses: actions/setup-python@v2.1.4
+      - name: Install Protobufs Ubuntu
+        run: sudo apt-get install libprotobuf-dev protobuf-compiler
+        if: runner.os == 'Linux'
+      - name: Install Protobufs OS X
+        run: |
+          brew install protobuf;
+        if: runner.os == 'macOS'
+      - name: Install Protobufs Windows
+        uses: lukka/run-vcpkg@v4
+        with:
+          vcpkgArguments: 'protobuf'
+          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+        if: runner.os == 'Windows'
+      - name: Install Google API Python Client
+        run: pip3 install --upgrade google-api-python-client
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2      
       - name: Run Python tests;
