--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,13 +117,8 @@ jobs:
       - name: Install Protobufs Ubuntu
         run: sudo apt-get install libprotobuf-dev protobuf-compiler
         if: runner.os == 'Linux'
-        uses: actions/setup-node@v2.1.2 
-      - name: Install Protobufs Ubuntu
-        run: sudo apt-get install libprotobuf-dev protobuf-compiler
-        if: runner.os == 'Linux'
       - name: Install Protobufs OS X
-        run: |
-          brew install protobuf
+        run: brew install protobuf
         if: runner.os == 'macOS'
       - name: Install Protobufs Windows
         uses: lukka/run-vcpkg@v4
