--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
   c-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
@@ -74,7 +74,9 @@ jobs:
           brew install coreutils
         if: runner.os == 'macOS'
       - name: Install Dependencies Windows
-        uses: lukka/run-vcpkg@v4
+        run: |
+          curl -s https://codecov.io/bash | bash
+        shell: bash
         with:
           vcpkgArguments: 'protobuf'
           vcpkgDirectory: '${{ github.workspace }}/vcpkg'
@@ -87,7 +89,7 @@ jobs:
   cpp-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
@@ -150,7 +152,7 @@ jobs:
   python-tests:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
@@ -169,7 +171,9 @@ jobs:
           brew install coreutils
         if: runner.os == 'macOS'
       - name: Install Dependencies Windows
-        uses: lukka/run-vcpkg@v4
+        run: |
+          curl -s https://codecov.io/bash | bash
+        shell: bash
         with:
           vcpkgArguments: 'protobuf'
           vcpkgDirectory: '${{ github.workspace }}/vcpkg'
