--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,8 @@ jobs:
         run: |
           #bin/build-lfc;
           #bin/run-lf-tests C;
-          echo "Hello World!"
+          cd xtext
+          ./gradlew test --tests org.icyphy.tests.runtime.CTest.*
   
   cpp-tests:
     strategy:
