--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         uses: codecov/codecov-action@v1 
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos 
-          files: ./org.icyphy.linguafranca.tests/build/reports/xml/jacoco
+          files: ./xtext/org.icyphy.linguafranca.tests/build/reports/xml/jacoco
           # optional flags: unittests 
           # optional name: codecov-umbrella 
           # optional fail_ci_if_error: true 
