--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,6 +133,13 @@ jobs:
           java-version: 14
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.2
+      - name: Cache .pnpm-store
+        uses: actions/cache@v1
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+      - name: Install pnpm
+          run: sudo npm i -g pnpm
       - name: Install Dependencies Ubuntu
         run: sudo apt-get install libprotobuf-dev protobuf-compiler
         if: runner.os == 'Linux'
