--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,7 @@ jobs:
         uses: lukka/run-vcpkg@v4
         with:
           vcpkgArguments: 'protobuf'
+          vcpkgGitCommitId: $(vcpkgGitRef)
           vcpkgDirectory: '${{ github.workspace }}/vcpkg'
         if: runner.os == 'Windows'
       - name: Run C tests;
